--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.CircleActivity"></activity>
         <activity
             android:name=".activity.MainPageActivity"
             android:label="@string/title_activity_main_page"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.SignUpActivity" />
-        <activity android:name=".activity.CarInfoActivity" android:label="CarInfoActivity" />
+        <activity
+            android:name=".activity.CarInfoActivity"
+            android:label="CarInfoActivity" />
     </application>
 
 </manifest>
