--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.CircleActivity"></activity>
+        <activity android:name=".activity.AddCarActivity"></activity>
+        <activity android:name=".activity.CircleActivity" />
         <activity
             android:name=".activity.MainPageActivity"
             android:label="@string/title_activity_main_page"
