--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.projetkotlindam2019">
+
+    <uses-sdk tools:overrideLibrary="com.google.firebase.auth"></uses-sdk>
 
     <application
         android:allowBackup="true"
